# energy-modelling-aarhus

./: README.md  index.html  pyproject.toml
docs/: Batch_Processing_Tutorial.docx  Batch_Processing_Tutorial.md  Gurobi_Setup_Tutorial.docx  Gurobi_Setup_Tutorial.md  Jupyter_Server_Tutorial.docx  Jupyter_Server_Tutorial.md  Server_Setup_Tutorial.docx  Server_Setup_Tutorial.md  tutorials.md
docs/tutorial_files/: MiniforgeInit.sh  env.yml  sbatch.sh  test.nc  test.py
src/esm_aarhus/pypsa/plotting/results/: curves.py  maps.py  stacks.py
